tests/fsharp/typecheck/sigs/neg111.bsl

neg111.fs(2,552,2,557): typecheck error FS0039: The type 'fail1' is not defined.

neg111.fs(3,624,3,629): typecheck error FS0039: The value or constructor 'fail2' is not defined. Maybe you want one of the following:
   Failure
   failwith
   failwithf

neg111.fs(5,538,5,540): typecheck error FS0003: This value is not a function and cannot be applied.
